# common-jvm

./: .bazelrc  .gitignore  .lintignore  AUTHORS  MODULE.bazel  README.md  WORKSPACE  maven_install.json  renovate.json
imports/java/com/google/cloud/bigdataoss/: BUILD.bazel
imports/java/com/google/type/: BUILD.bazel
imports/java/liquibase/ext/: BUILD.bazel
imports/java/liquibase/ext/spanner/: BUILD.bazel
imports/java/org/apache/hadoop/: BUILD.bazel
imports/java/org/apache/parquet/: BUILD.bazel
imports/java/software/amazon/awssdk/: BUILD.bazel
imports/java/software/amazon/awssdk/core/: BUILD.bazel
imports/java/software/amazon/awssdk/http/: BUILD.bazel
imports/java/software/amazon/awssdk/services/kms/: BUILD.bazel
imports/java/software/amazon/awssdk/services/rds/: BUILD.bazel
imports/kotlin/com/google/type/: BUILD.bazel
imports/kotlin/kotlinx/coroutines/: BUILD.bazel
imports/kotlin/kotlinx/coroutines/debug/: BUILD.bazel
imports/kotlin/kotlinx/coroutines/guava/: BUILD.bazel
imports/kotlin/kotlinx/coroutines/reactive/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/aws/: BUILD.bazel  RefreshableAwsCredentialsProvider.kt
src/main/kotlin/org/wfanet/measurement/aws/common/: BUILD.bazel  RegionConverter.kt
src/main/kotlin/org/wfanet/measurement/aws/kms/: AwsKmsClient.kt  AwsKmsClientFactory.kt  BUILD.bazel  RefreshableAwsCredentialsProvider.kt
src/main/kotlin/org/wfanet/measurement/aws/postgres/: BUILD.bazel  PostgresConnectionFactories.kt  PostgresCredentials.kt  PostgresFlags.kt
src/main/kotlin/org/wfanet/measurement/aws/s3/: BUILD.bazel  S3Flags.kt  S3StorageClient.kt
src/main/kotlin/org/wfanet/measurement/common/: BUILD.bazel  Base64.kt  Bytes.kt  ClassLoaderResources.kt  CommandLines.kt  ContinuationCompletionHandler.kt  CoroutineReadableByteChannel.kt  CoroutineWritableByteChannel.kt  Durations.kt  ExponentialBackoff.kt  Filters.kt  Flow.kt  HexString.kt  Instrumentation.kt  InvalidatableLazy.kt  JniException.kt  LoadLibrary.kt  LoadingCache.kt  LocalDateProgression.kt  LogExceptions.kt  NamedThreadFactory.kt  NativeLibraryLoader.kt  OpenEndTimeRange.kt  ProtoReflection.kt  ProtoUtils.kt  Reflect.kt  ResourceNameParser.kt  Runfiles.kt  SuspendingByteChannel.kt  Uris.kt
src/main/kotlin/org/wfanet/measurement/common/crypto/: Aead.kt  BUILD.bazel  DerEncoding.kt  EncryptedSignedStore.kt  GenerateCertificate.kt  Hashing.kt  HybridCryptor.kt  InvalidSignatureException.kt  KeyHandle.kt  KeyMaterialGenerator.kt  KeyStorageProvider.kt  PemIo.kt  PrivateKeyHandle.kt  PrivateKeyStore.kt  PublicKeyHandle.kt  SecurityProvider.kt  Signatures.kt  SignedBlob.kt  SignedStore.kt  SigningCerts.kt  SigningKeyHandle.kt  SigningKeyStore.kt  TinkAead.kt
src/main/kotlin/org/wfanet/measurement/common/graphviz/: BUILD.bazel  Dot.kt
src/main/kotlin/org/wfanet/measurement/common/grpc/: BUILD.bazel  BearerTokenCallCredentials.kt  Channel.kt  ChannelShutdownHook.kt  ClientCertificateAuthentication.kt  CommonServer.kt  DefaultDeadlineInterceptor.kt  DeferredForwardingListener.kt  DeferredListener.kt  ErrorLoggingServerInterceptor.kt  InProcessServersMethods.kt  LoggingClientInterceptor.kt  LoggingServerInterceptor.kt  OAuthTokenAuthentication.kt  OpenIdConnectAuthentication.kt  Preconditions.kt  RpcStatus.kt  ServiceConfig.kt  SuspendableServerInterceptor.kt  TlsFlags.kt  Tracing.kt  TransportSecurity.kt
src/main/kotlin/org/wfanet/measurement/common/guava/: BUILD.bazel  Futures.kt
src/main/kotlin/org/wfanet/measurement/common/identity/: BUILD.bazel  Identifiers.kt  RandomIdGenerator.kt
src/main/kotlin/org/wfanet/measurement/common/idtoken/: RequestUri.kt
src/main/kotlin/org/wfanet/measurement/common/openid/: BUILD.bazel  RequestUri.kt
src/main/kotlin/org/wfanet/measurement/common/rabbitmq/: BUILD.bazel  QueueClient.kt  (+1 more)
src/main/kotlin/org/wfanet/measurement/queue/: BUILD.bazel  QueueClient.kt  QueuePublisher.kt  QueueSubscriber.kt
src/main/kotlin/org/wfanet/measurement/storage/: AeadStorageClient.kt  AeadStore.kt  BUILD.bazel  MesosRecordIoStorageClient.kt  ParquetKmsClient.kt  ParquetKmsClientBridge.kt  ParquetStorageClient.kt  SelectedStorageClient.kt  Selector.kt  ShardedStorageClient.kt  StorageClient.kt  StorageClientFactory.kt  Store.kt  VerifiedStorageExtensions.kt
src/main/proto/google/type/: BUILD.bazel
src/main/proto/wfa/measurement/common/testing/: BUILD.bazel  contains_any.proto  depends_on_simple.proto  simple.proto
src/main/proto/wfa/measurement/internal/testing/: BUILD.bazel  forwarded_storage_service.proto
src/main/proto/wfa/measurement/storage/: BUILD.bazel  parquet_row.proto
src/main/proto/wfa/measurement/storage/testing/: BUILD.bazel  complex_message.proto  parquet_test_message.proto
src/main/proto/wfa/measurement/testing/: BUILD.bazel
src/main/proto/wfa/measurement/testing/riegeli/: BUILD.bazel  simple_message.proto
src/test/kotlin/org/wfanet/bazel/: BUILD.bazel  KtJvmProtoLibraryTest.kt
src/test/kotlin/org/wfanet/measurement/aws/: BUILD.bazel  RefreshableAwsCredentialsProviderTest.kt
src/test/kotlin/org/wfanet/measurement/common/: BUILD.bazel  Base64Test.kt  BytesTest.kt  CoroutineReadableByteChannelTest.kt  CoroutineWritableByteChannelTest.kt  CountDownLatchTest.kt  ExponentialBackoffTest.kt  FlowKtTest.kt  InstrumentationTest.kt  InvalidatableLazyTest.kt  LoadingCacheTest.kt  LocalDateProgressionTest.kt  OpenEndTimeRangeTest.kt  ProtoReflectionTest.kt  ProtoUtilsTest.kt  RenewedFlowTest.kt
src/test/kotlin/org/wfanet/measurement/queue/: AbstractQueueTest.kt  BUILD.bazel
src/test/kotlin/org/wfanet/measurement/storage/: BUILD.bazel  MesosRecordIoStorageClientTest.kt  ParquetKmsClientBridgeTest.kt  ParquetKmsClientTest.kt  ParquetStorageClientEmulatorTest.kt  ParquetStorageClientTest.kt  SelectedStorageClientTest.kt  SelectorTest.kt  ShardedStorageClientTest.kt  StorageClientFactoryTest.kt
src/test/proto/wfa/measurement/common/: BUILD.bazel  fake_message.proto
src/test/proto/wfa/measurement/common/riegeli/: BUILD.bazel
src/test/resources/db/spanner/: BUILD.bazel  changelog.yaml  create-test-schema.sql
(+408 files in other folders)
