package(default_visibility = ["//visibility:public"])

alias(
    name = "s3",
    actual = "@maven//:software_amazon_awssdk_s3",
)

alias(
    name = "sdk-core",
    actual = "@maven//:software_amazon_awssdk_sdk_core",
)

alias(
    name = "http-client-spi",
    actual = "@maven//:software_amazon_awssdk_http_client_spi",
)
