load("//build/kt_jvm_proto:defs.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_proto_library(
    name = "dayofweek_kt_jvm_proto",
    srcs = ["@com_google_googleapis//google/type:dayofweek_proto"],
    deps = ["@com_google_googleapis//google/type:type_java_proto"],
)

kt_jvm_proto_library(
    name = "date_kt_jvm_proto",
    srcs = ["@com_google_googleapis//google/type:date_proto"],
    deps = ["@com_google_googleapis//google/type:type_java_proto"],
)

kt_jvm_proto_library(
    name = "latlng_kt_jvm_proto",
    srcs = ["@com_google_googleapis//google/type:latlng_proto"],
    deps = ["@com_google_googleapis//google/type:type_java_proto"],
)

kt_jvm_proto_library(
    name = "interval_kt_jvm_proto",
    srcs = ["@com_google_googleapis//google/type:interval_proto"],
    deps = ["@com_google_googleapis//google/type:type_java_proto"],
)
