load("@rules_proto//proto:defs.bzl", "proto_library")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "parquet_row_proto",
    srcs = ["parquet_row.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        "@com_google_googleapis//google/type:date_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

kt_jvm_proto_library(
    name = "parquet_row_kt_jvm_proto",
    deps = [":parquet_row_proto"],
)
