load("@rules_proto//proto:defs.bzl", "proto_library")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "test_config_proto",
    srcs = ["test_config.proto"],
)

kt_jvm_proto_library(
    name = "test_config_kt_jvm_proto",
    deps = [":test_config_proto"],
)
