load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@wfa_rules_kotlin_jvm//kotlin:defs.bzl",
    "kt_jvm_grpc_proto_library",
    "kt_jvm_proto_library",
)

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "fake_message_proto",
    srcs = ["fake_message.proto"],
    strip_import_prefix = "/src/test/proto",
)

java_proto_library(
    name = "fake_message_java_proto",
    deps = [":fake_message_proto"],
)

kt_jvm_proto_library(
    name = "fake_message_kt_jvm_proto",
    deps = [":fake_message_proto"],
)

proto_library(
    name = "fake_service_proto",
    srcs = ["fake_service.proto"],
    strip_import_prefix = "/src/test/proto",
)

kt_jvm_grpc_proto_library(
    name = "fake_service_kt_jvm_grpc_proto",
    deps = [":fake_service_proto"],
)
