load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "refreshable_aws_credentials_provider",
    srcs = ["RefreshableAwsCredentialsProvider.kt"],
    visibility = [
        "//src/main/kotlin/org/wfanet/measurement/gcloud/kms:__pkg__",
        "//src/test/kotlin/org/wfanet/measurement/aws:__pkg__",
    ],
    deps = [
        "//imports/java/software/amazon/awssdk/auth",
    ],
)
