load("//build/rules_kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "common",
    srcs = glob(["*.kt"]),
    deps = [
        "//imports/java/com/google/common:guava",
        "//imports/java/com/google/devtools/build/runfiles",
        "//imports/java/com/google/protobuf",
        "//imports/java/com/google/protobuf/util",
        "//imports/java/org/jetbrains/annotations",
        "//imports/java/picocli",
        "//imports/kotlin/com/google/protobuf/kotlin",
        "//imports/kotlin/kotlinx/coroutines:core",
        "@com_google_googleapis//google/type:type_java_proto",
    ],
)
